Fix spacing of header and score

--- a/styles.css
+++ b/styles.css
@@ -37,6 +37,7 @@ header {
     flex-direction: column;
     align-items: center;
     line-height: 0;
+    padding-bottom: 50px;
 }
 
 h1 {
@@ -70,6 +71,7 @@ main {
     justify-content: center;
     align-items: center;
     gap: 100px;
+    line-height: 0.25
 }
 
 .player-container {
